Optimizing builder mode